fix: image spacing and rendering

--- a/orb/src/App.css
+++ b/orb/src/App.css
@@ -37,10 +37,15 @@
     right: calc(5% + 106px);
 }
 
+.buffer {
+    height: 50px;
+    width: 100vw;
+}
+
 .preview {
     width: 100vw;
+    height: 100%;
     padding-block: 20px;
-    margin-top: 50px;
     transition: all 0.2s ease-in-out;
     opacity: 0;
     transform: translateY(20px);
@@ -49,8 +54,8 @@
 
 .image {
     background: transparent;
-    height: 300px;
-    width: 100%;
+    width: auto;
+    height: 350px;
     display: grid;
     position: relative;
     margin: auto;
